--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "instrument-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://instrument-tracker-qqes.onrender.com",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "date-fns": "^2.30.0",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^3.5.0"
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
